--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,27 +7,26 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      LOCAL_IMAGE_TAG: local/getting-started:latest
       REMOTE_IMAGE_TAG: ${{ secrets.MMC_REPO }}/getting-started:latest
     steps:
     - name: Source Checkout
       uses: actions/checkout@v4
 
     - name: Docker login
-      uses: docker/login-action@v3.7.0
-      with:
-        # Username used to log against the Docker registry
+      uses: docker/login-action@v3
+      with:        
         username: ${{ secrets.REGISTRY_USERNAME }}
-        # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.REGISTRY_PASSWORD }}
-        # Specifies whether the given registry is ECR (auto, true or false)
       
-    - name: Build Image
-      run: docker build . --file Dockerfile --tag ${{ env.LOCAL_IMAGE_TAG }}
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
 
-    - name: Tag Image
-      run: docker tag ${{ env.LOCAL_IMAGE_TAG }} ${{ env.REMOTE_IMAGE_TAG }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
           
-    - name: Push to Registry
-      run: docker push -- ${{ env.REMOTE_IMAGE_TAG }}
+    - name: Build and Push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{env.REMOTE_IMAGE_TAG }}
     
